# Yaf

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
docs/: ARCHITECTURE.md  LANGUAGE_SPEC.md  QUICKSTART.md  README.md  STYLE_GUIDE.md  TUTORIAL.md
examples/: 01_hello_world.yaf  02_variables.yaf  03_conditionals.yaf  04_functions.yaf  05_arrays_loops.yaf  06_math_functions.yaf  07_strings.yaf  08_algorithms.yaf  09_data_structures.yaf  10_complete_project.yaf  11_game.yaf  12_input_demo.yaf  13_becnhmark_time.yaf
runtime/: yaf_runtime.c  yaf_runtime.h
src/: cli.rs  diagnostics.rs  error.rs  lib.rs  main.rs
src/backend/: c.rs  llvm.rs  mod.rs
src/core/: ast.rs  lexer.rs  mod.rs  parser.rs  typechecker.rs
src/libs/: collections.rs  io.rs  math.rs  mod.rs  net.rs  string.rs  time.rs
src/runtime/: gc.rs  memory.rs  mod.rs  values.rs
