[package]
name = "yaf_language"
version = "0.1.0"
edition = "2021"
description = "YAF - Yet Another Future: Tan legible como Python, tan sólido como Rust"
authors = ["Yafel Garcia <a.yafel10@gmail.com"]
license = "MIT"
repository = "https://github.com/Lexharden/Yaf.git"
homepage = "https://github.com/Lexharden/Yaf"
documentation = "https://github.com/Lexharden/Yaf/blob/main/README.md"
keywords = ["compiler", "programming-language", "llvm", "yaf"]
categories = ["compilers", "development-tools"]

[[bin]]
name = "yaf"
path = "src/main.rs"

[dependencies]
inkwell = { version = "0.6.0", features = ["llvm18-1"], optional = true }
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
colored = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
lazy_static = "1.5"

[dev-dependencies]
criterion = "0.7"

[features]
default = ["llvm-backend"]
llvm-backend = ["inkwell"]
cranelift-backend = []
jit = []